[gd_scene load_steps=4 format=3 uid="uid://degts5oj15lav"]

[ext_resource type="Script" path="res://Components/Bullet Generator Component/BulletGenerator.gd" id="1_o8b1p"]
[ext_resource type="PackedScene" uid="uid://ys62evbyl4v4" path="res://bullet.tscn" id="2_0ue4r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_psnfq"]

[node name="BulletGenerator" type="Area2D"]
script = ExtResource("1_o8b1p")
bullet = ExtResource("2_0ue4r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_psnfq")

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
